# smartid

./: CMakeLists.txt  LICENSE  README
src/: CMakeLists.txt  smarti_codes.h  smartid_cmd.c  smartid_conn.c  smartid_conn.h  smartid_device.c  smartid_device.h  smartid_logging.h  smartid_main.c  smartid_version.h.in
